# Match-Video-Detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  main_passes.py  mlruns.db  pyproject.toml  pytest.ini  requirements.txt  tst.py  vid.py
docs/: API_DOCUMENTATION.md  TRAINING_README.md  project_structure.md
mage/: README.md
mage/pipelines/football_video_analysis/: api_trigger.py  data_exporter.py  data_loader.py  event_detector.py  metrics_calculator.py  mlflow_logger.py  notification_sender.py  object_detector.py  pipeline.yaml  quality_checker.py  tracker.py  video_processor.py  visualizer.py
mlruns/1/ef0362c756d748f9a0c146ee2c5a2954/artifacts/: training_config.yaml
mlruns/3/b08a88a68c4c458284eb8a1a929270ff/artifacts/: results.csv
outputs/: monitoring_dashboard.html
scripts/: __init__.py  check_dataset.py  format_code.py  monitoring_demo.py  run_tests.py  setup.py  start_api.py  start_mlflow_ui.py  visualize_box_crosses.py
src/: __init__.py  pipeline.py
src/api/: __init__.py  api.py  config.py  job_manager.py  main.py  models.py
src/api/middleware/: __init__.py  cors.py
src/api/routes/: __init__.py  download.py  health.py  models.py  monitoring.py  predict.py
src/assignment/: __init__.py  assignment_utils.py  camera_movement_estimator.py  player_ball_assigner.py  speed_distance_estimator.py  team_assigner.py  view_transformer.py
src/core/: __init__.py  config.py  main.py
src/detection/: __init__.py  detection_result.py  detection_utils.py  yolo.py  yolo_detector.py
src/events/: cross_detector.py  entities.py  pass_detector.py  pass_event.py  possession_tracker.py
src/monitoring/: __init__.py  alert_manager.py  dashboard_generator.py  entities.py  metrics_collector.py  model_monitor.py  threshold_manager.py  workflow_orchestrator.py
src/tracking/: __init__.py  track_manager.py  tracker.py  tracking_result.py  tracking_utils.py
src/training/: __init__.py  data_preparation.py  model_deployment.py
src/utils/: bbox_utils.py  colors.py  video_utils.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_detection.py  test_entities.py  test_events.py  test_utils.py
training/config/: __init__.py  training_config.yaml
training/data/: __init__.py  preparation.py
training/scripts/: __init__.py  test_model.py  train.py
training_outputs/: dataset.yaml
training_outputs/cross_detection_model/: args.yaml
training_outputs/labels/: train.cache  val.cache
training_outputs/labels/train/: cross-1_0003.txt  cross-1_0004.txt  cross-2_0000.txt  cross-2_0001.txt  cross-2_0002.txt  cross-2_0003.txt  cross-2_0004.txt  cross-2_0005.txt  cross-2_0006.txt  cross-5_0003.txt  cross-5_0004.txt  cross-6_0000.txt  cross-6_0001.txt  cross-6_0002.txt  cross-6_0003.txt  cross-6_0004.txt  cross-6_0005.txt  cross-6_0006.txt  cross-6_0007.txt  cross-6_0008.txt
training_outputs/labels/val/: cross-1_0000.txt  cross-1_0001.txt  cross-1_0002.txt  cross-1_0003.txt  cross-1_0004.txt  cross-1_0005.txt  cross-1_0006.txt  cross-1_0007.txt  cross-1_0008.txt  cross-1_0009.txt  cross-8_0000.txt  cross-8_0001.txt  cross-8_0002.txt  cross-8_0003.txt  cross-8_0004.txt  cross-8_0005.txt  cross-8_0006.txt  cross-8_0007.txt  cross-8_0008.txt
